[tool.poetry]
name = "flappy-bird-py"
version = "0.1.0"
description = "A simple 2D Flappy Bird clone built with Python."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"